--- a/backend_deposit/templates/payment/credit_card.html
+++ b/backend_deposit/templates/payment/credit_card.html
@@ -19,7 +19,7 @@ background: linear-gradient(125deg, #207A89, #17A3BA 55%);
 box-shadow: 0px 0px 10px 0px rgb(84, 239, 50);
   border: 1px solid grey;
     margin: auto;
-  position: sticky;
+  position: relative;
   top: 0; left: 0; bottom: 0; right: 0;
   height: 215px;
     background: linear-gradient(-125deg, #1D3349, #2a70b0 55%);
