--- a/backend_deposit/templates/payment/invoice.html
+++ b/backend_deposit/templates/payment/invoice.html
@@ -2,40 +2,44 @@
 {% block title %}Оплата
 {% endblock %}
 {% block content %}
-<div class="container">
-  <div class="row justify-content-center">
-        <div class="col-auto justify-content-center"><br>
+
+<div class="container ">
+
+  <div class="row col-xl-4 col-lg-6  col-md-9 col-sm-9 col-12 justify-content-center  border border-primary">
+
+    <div class="row justify-content-center ">
+        <div class="col-12 justify-content-center align-content-center"><br>
             <span>Проиведите оплату на сумму {{ payment.amount }} согласно инструкции<br></span><br>
             {% include 'includes/timer.html' %}
         </div>
-  </div>
+    </div>
 
-  <div class="row justify-content-md-center">
-        <div class="col-auto">
+    <div class="row justify-content-center">
+        <div class="col-12 justify-center">
         {% include 'payment/credit_card.html' %}
         </div>
-  </div>
+    </div>
 
-  <div class="row justify-content-md-center">
-          <div class="col-auto justify-center"><br>
+    <div class="row justify-content-center">
+          <div class=col-12 justify-center"><br>
               <span>{{ payment.pay_requisite.info }}</span>
               <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                       {% include 'includes/form_fields.html' %}
                     <input id="confirm_btn" class="btn btn-success btn-lg" type="submit" value="Оплатил и приложил чек">
                 </form>
-          </div>
+    </div>
 
-  </div>
 
-  <div class="row justify-content-md-center">
-          <div class="col-auto">
+
+    <div class="row justify-content-center">
+          <div class="col-12 justify-center">
               <span id="time_exp_info1" style="display: none"><p>Время вышло</p></span>
           </div>
+    </div>
+
   </div>
-
 </div>
-
 
 
 
