--- a/backend_deposit/templates/payment/payment_edit.html
+++ b/backend_deposit/templates/payment/payment_edit.html
@@ -29,8 +29,8 @@
                 <td>{{ payment.shop }}</td>
             </tr>
             <tr>
-                <td>outer_order_id</td>
-                <td>{{ payment.outer_order_id }}</td>
+                <td>order_id</td>
+                <td>{{ payment.order_id }}</td>
             </tr>
             <tr>
                 <td>user_login</td>
