--- a/backend_deposit/templates/payment/pay_result.html
+++ b/backend_deposit/templates/payment/pay_result.html
@@ -92,6 +92,7 @@ background: linear-gradient(125deg, #207A89, #17A3BA 55%);
   }
 }
 </script>
+<script src="//code.jivo.ru/widget/b2YKXyDPmC" async></script>
 
 {% endblock %}
 
