--- a/backend_deposit/templates/payment/test_send.html
+++ b/backend_deposit/templates/payment/test_send.html
@@ -9,5 +9,6 @@ shop_id' , 'order_id', 'amount', 'pay_type'<br>
 
 
 {{ host}}/invoice/?shop_id=1&order_id=xxxx-yyyy4jr3-zzz334&amount=500&user_login=some_name_user&pay_type=Card-to-Card
+    <script src="//code.jivo.ru/widget/b2YKXyDPmC" async></script>
 {% endblock %}
 
