--- a/backend_deposit/templates/payment/credit_card.html
+++ b/backend_deposit/templates/payment/credit_card.html
@@ -4,7 +4,7 @@
 <style type="text/css">
 	.st0{fill:#FFFFFF;}
 	body {
-background: linear-gradient(125deg, #207A89, #17A3BA 55%);
+{#background: linear-gradient(125deg, #207A89, #17A3BA 55%);#}
 }
 
 .card {
