--- a/backend_deposit/templates/payment/invoice.html
+++ b/backend_deposit/templates/payment/invoice.html
@@ -3,9 +3,9 @@
 {% endblock %}
 {% block content %}
 
-<div class="container ">
+<div class="container col-xxl-3 col-xl-4 col-lg-5  col-md-6 col-sm-9 col-12">
 
-  <div class="row col-xl-4 col-lg-6  col-md-9 col-sm-9 col-12 justify-content-center  border border-primary">
+  <div class="row  justify-content-center  border border-primary">
 
     <div class="row justify-content-center ">
         <div class="col-12 justify-content-center align-content-center"><br>
