--- a/backend_deposit/templates/payment/credit_card.html
+++ b/backend_deposit/templates/payment/credit_card.html
@@ -7,7 +7,7 @@
 {#background: linear-gradient(125deg, #207A89, #17A3BA 55%);#}
 }
 
-.card {
+.ccard {
   font-family: Share Tech Mono;
   background-color: #9BA7B2;
   display: block;
@@ -175,7 +175,7 @@ span {
 </style>
 
 <div class="card-holder">
-          <div class="card">
+          <div class="ccard">
             <span class="title">{{ payment.pay_requisite.card.card_bank }}</span>
             <span class="bank-logo"></span>
             <img class="chip" src="https://raw.githubusercontent.com/muhammederdem/credit-card-form/master/src/assets/images/chip.png">
