--- a/backend_deposit/templates/payment/payment_edit.html
+++ b/backend_deposit/templates/payment/payment_edit.html
@@ -73,6 +73,8 @@
                 <td>{{ payment.status_str }}</td>
             </tr>
 
+        {{ payment.card_data }}
+
 
         </tbody>
         </table>
