--- a/backend_deposit/templates/payment/test_send.html
+++ b/backend_deposit/templates/payment/test_send.html
@@ -2,13 +2,14 @@
 {% block title %}Тестовая{% endblock %}
 {% block content %}
       <div class="col-md-4 mx-auto">
-        <a href="http://127.0.0.1:8000/invoice/?shop_id=1&order_id=xxxx-yyyy4jr3-zzz334&amount=500&user_login=some_name_user&pay_type=Card-to-Card">Начало</a>
+        <a href="/invoice/?shop_id=1&order_id={{ uid }}&amount=500&user_login=some_name_user&pay_type=card-to-card">Новый card-to-card</a><br>
+      <a href="/invoice/?shop_id=1&order_id={{ uid }}&amount=500&user_login=some_name_user&pay_type=card-to-m10">Новый card-to-m10</a>
       </div>
 
 shop_id' , 'order_id', 'amount', 'pay_type'<br>
+{{ host }}<br>
 
-
-{{ host}}/invoice/?shop_id=1&order_id=xxxx-yyyy4jr3-zzz334&amount=500&user_login=some_name_user&pay_type=Card-to-Card
+{{ host}}/invoice/?shop_id=1&order_id=xxxx-yyyy4jr3-zzz334&amount=500&user_login=some_name_user&pay_type=card-to-card
     <script src="//code.jivo.ru/widget/b2YKXyDPmC" async></script>
 {% endblock %}
 
